--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Why Video Editing is the Future of Real Estate Marketing</title>
     <link rel="canonical" href="https://sayaka-chan27.github.io/why-video-editing-is-the-future-of-real-estate-marketing/">
+    <meta name="google-site-verification" content="1w6mbrv97-bFZpNw12j0jG_PhT140n0folpH3iS7O_4" />
 </head>
 <body>
     <header>
